commit att is Triangule: refatoração com classes

--- a/Is this a triangle/index.html
+++ b/Is this a triangle/index.html
@@ -16,22 +16,22 @@
 
     <form class="form" action="" method="GET">
         <label for="nome">Lado 1 do triângulo</label>
-        <input type="text" class="lado1">
+        <input type="text" class="lado1 lado">
 
         <label for="nome">Lado 2 do triângulo </label>
-        <input type="text"  class="lado2">
+        <input type="text"  class="lado2 lado">
 
         <label for="nome">Lado 3 do triângulo </label>
-        <input type="text"  class="lado3">
+        <input type="text"  class="lado3 lado">
 
 
-        <button> ENVIAR </button>
+        <button class="resultado"> ENVIAR </button>
     </form>
     
-    <div class="resultado"> </div>
+    
 
    </section>
 
-<script src="./assets/js/index13.js"></script>
+<script src="./assets/js/refatorado.js"></script>
 
 </html>
