--- a/GeradorDeSenhas/Public/index.html
+++ b/GeradorDeSenhas/Public/index.html
@@ -16,10 +16,10 @@
 
        <div class="opções"> 
             <p><label for="qtdCaracteres">Quantidade de caracteres desejada</label> <input type="number" min="0" max="50" class="qtd-Caracteres" ></p>
-            <p><label for="add-num">Deseja adicionar Numeros</label>  <input type="checkbox" class="add-Num" ></p> 
-            <p><label for="add-Maiusculas">Deseja adicionar Letras Maiúsculas</label><input type="checkbox" class="add-Maiusculas" ></p>  
-            <p><label for="add-Minusculas">Deseja adicionar Letras Minúsculas</label><input type="checkbox" class="add-Minusculas" ></p>  
-            <p><label for="add-Simbolos">Deseja adicionar Simbolos</label><input type="checkbox" class="add-Simbolos" ></p>   
+            <p><label for="add-num"> adicionar Numeros</label>  <input type="checkbox" class="add-Num" ></p> 
+            <p><label for="add-Maiusculas"> adicionar Letras Maiúsculas</label><input type="checkbox" class="add-Maiusculas" ></p>  
+            <p><label for="add-Minusculas"> adicionar Letras Minúsculas</label><input type="checkbox" class="add-Minusculas" ></p>  
+            <p><label for="add-Simbolos"> adicionar Simbolos</label><input type="checkbox" class="add-Simbolos" ></p>   
             <button class="button"> GERAR SENHA</button>
        </div>
 
