--- a/Timer/index.html
+++ b/Timer/index.html
@@ -10,7 +10,7 @@
 <body class="body">
 
 <section class="conteiner">
-        <h1> Timer  </h1>
+        <h1> TIMER  </h1>
         <p class="timer"> 00:00:00 </p>
         <p class="buttons">
             <button class="iniciar"> iniciar </button>
